Fixed issue of footer icon on mobile device(5379)

--- a/css/personalizedContent/customMedia.less
+++ b/css/personalizedContent/customMedia.less
@@ -76,16 +76,6 @@
 				}
 			}
 
-			.footerLink {
-				span {
-					padding-bottom : 37px;
-				}
-				i {
-					padding-left   : 5px;
-					padding-bottom : 6px;
-				}
-			}
-
 			#yourProfile {
 				.your-profile-container {
 					padding-top : 0px;
