--- a/css/personalizedContent/widgets.less
+++ b/css/personalizedContent/widgets.less
@@ -107,16 +107,6 @@
 			border-left : 3px solid @pc-red;
 		}
 	}
-	.footerLink {
-		i{
-			margin-left : 8px;
-		}
-		span {
-			vertical-align : middle;
-			display        : inline-block;
-			padding-bottom : 21px;
-		}
-	}
 	#active-holder {
 		overflow : hidden;
 
@@ -850,8 +840,17 @@
 		float     : right;
 		padding   : 0px 8px;
 	}
-	.footer-icon {
-		overflow:  hidden;
-		font-size : 2em;
+
+	.footerLink {
+		i {
+			margin-left    : 8px;
+			vertical-align : middle;
+			overflow       : hidden;
+			font-size      : 2em;
+		}
+		span {
+			vertical-align : text-top
+		}
 	}
+
 }
